# FFMedia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.pl  install_manifest.txt
cmake/: FFMEDIA_PROPERTY.cmake  FFMPEG_PROPERTY.cmake  GOOGLETEST_PROPERTY.cmake
src/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt
